This file lists changes on this extension.
Localisation updates are done on betawiki and aren't listed here.

0.5.4 - 11 July 2008
  Removed $wgTrackLinkChanges.

0.5.3 - 9 July 2008
  Added $wgTrackLinkChanges.

0.5.2 - 8 July 2008
  Added $wgConfigureUpdateCacheEpoch to choose if $wgCacheEpoch should be
  updated when saving changes in Special:Configure.

0.5.1 - 7 July 2008
  (bug 14742) Fixed default value of $wgExternalDiffEngine.

0.5.0 - 6 July 2008
  * Added support for extensions
  * Rewrote JavaScript


0.4.7 - 3 July 2008
  Renamed $wgAdditionalXMLTypes to $wgXMLMimeTypes.

0.4.6 - 2 July 2008
  Added $wgAdditionalXMLTypes.

0.4.5 - 25 June 2008
  Added localized names for special pages.

0.4.4 - 15 June 2008
  Added manage.php maintenance script to do maintenance with configuration
  files.

0.4.3 - 12 June 2008
  $wgEnableCascadingProtection is obsolete in 1.13 +

0.4.2 - 10 June 2008
  Added $wgRC2UDPOmitBots.

0.4.1 - 9 June 2008
  It's now possible to preview changes in Special:Configure.

0.4.0 - 8 June 2008
  Added a difference engine to see differences between versions in
  Special:ViewConfig.


0.3.11 - 5 June 2008
  Added $wgActiveUserEditCount and $wgActiveUserDays.

0.3.10 - 4 June 2008
  Added $wgSpecialVersionShowHooks.

0.3.9 - 31 May 2008
  Removed $wgPerLanguageCaching.

0.3.8 - 30 May 2008
  Fixed display of not editable settings.

0.3.7 - 28 May 2008
  * If $wgLocalMessageCache is set to an empty value, message cache won't use
    anymore files to cache localisations.
  * Fixed type of $wgNonincludableNamespaces.

0.3.6 - 27 May 2008
  Added configure-section-groups-notallowed message, was missing.

0.3.5 - 25 May 2008
  * Fixed a bug, Special:ViewConfig was checking for viewconfigure-all right
    instead of viewconfig-all.
  * In Special:ViewConfig, unviewabled setting are now displayed in grey.
  * Fixed security issues

0.3.4 - 24 May 2008
  Added $wgPerLanguageCaching.

0.3.3 - 23 May 2008