@@ -204,15 +204,25 @@ $extensions = array(
 			'wgCategoryTreeDisableCache' => 'bool',
 			'wgCategoryTreeDynamicTag' => 'bool',
 			'wgCategoryTreeHTTPCache' => 'bool',
+			'wgCategoryTreeForceHeaders' => 'bool',
+			'wgCategoryTreeSidebarRoot' => 'text',
+			'wgCategoryTreeHijackPageCategories' => 'bool',
 			'wgCategoryTreeUnifiedView' => 'bool',
-			'wgCategoryTreeOmitNamespace' => 'bool',
 			'wgCategoryTreeMaxDepth' => 'array',
 			'wgCategoryTreeExtPath' => 'text',
 			'wgCategoryTreeDefaultMode' => array( 0 => 'Categories', 10 => 'Pages', 20 => 'All' ),
 			'wgCategoryTreeCategoryPageMode' => array( 0 => 'Categories', 10 => 'Pages', 20 => 'All' ),
+			'wgCategoryTreeDefaultOptions' => 'array',
+			'wgCategoryTreeCategoryPageOptions' => 'array',
+			'wgCategoryTreeSidebarOptions' => 'array',
+			'wgCategoryTreePageCategoryOptions' => 'array',
 		),
 		'array' => array(
 			'wgCategoryTreeMaxDepth' => 'assoc',
+			'wgCategoryTreeDefaultOptions' => 'assoc',
+			'wgCategoryTreeCategoryPageOptions' => 'assoc',
+			'wgCategoryTreeSidebarOptions' => 'assoc',
+			'wgCategoryTreePageCategoryOptions' => 'assoc',
 		),
 		'url' => 'http://www.mediawiki.org/wiki/Extension:CategoryTree',
 	),
@@ -321,7 +331,8 @@ $extensions = array(
 	array(
 		'name' => 'Collection',
 		'settings' => array(
-			'wgPDFServer' => 'text',
+			'wgCollectionMWServeURL' => 'text',
+			'wgCollectionMWServeCredentials' => 'text',
 			'wgCommunityCollectionNamespace' => 'int',
 			'wgSharedBaseURL' => 'text',
 			'wgLicenseArticle' => 'text',
@@ -409,6 +420,7 @@ $extensions = array(
 			'wgContactUser' => 'text',
 			'wgContactSender' => 'text',
 			'wgContactSenderName' => 'text',
+			'wgContactRequireAll' => 'bool',
 		),
 		'url' => 'http://www.mediawiki.org/wiki/Extension:ContactPage',
 	),
@@ -522,6 +534,7 @@ $extensions = array(
 			'wgFlaggedRevTabs' => 'bool',
 			'wgFlaggedRevsNamespaces' => 'array',
 			'wgFlaggedRevsPatrolNamespaces' => 'array',
+			'wgFlaggedRevsWhitelist' => 'array',
 			'wgFlaggedRevsOverride' => 'bool',
 			'wgFlaggedRevsPrecedence' => 'bool',
 			'wgFlaggedRevsExceptions' => 'array',
@@ -536,7 +549,6 @@ $extensions = array(
 			'wgFlaggedRevValues' => 'int',
 			'wgFlaggedRevPristine' => 'int',
 			'wgFlagRestrictions' => 'array',
-			'wgFlaggedRevsCascade' => 'bool',
 			'wgReviewCodes' => 'array',
 			'wgFlaggedRevsAutopromote' => 'array',
 			'wgFlaggedRevsExternalStore' => 'array',
@@ -550,6 +562,7 @@ $extensions = array(
 		'array' => array(
 			'wgFlaggedRevsNamespaces' => 'ns-simple',
 			'wgFlaggedRevsPatrolNamespaces' => 'ns-simple',
+			'wgFlaggedRevsWhitelist' => 'simple',
 			'wgFlaggedRevsExceptions' => 'simple',
 			'wgFlaggedRevTags' => 'assoc',
 			'wgFlagRestrictions' => 'array',
@@ -766,9 +779,26 @@ $extensions = array(
 			'wgTranslateFuzzyBotName' => 'text',
 			'wgTranslateCssLocation' => 'text',
 			'wgTranslateDocumentationLanguageCode' => 'text',
+			'wgTranslateBlacklist' => 'array',
+			'wgTranslateAuthorBlacklist' => 'array',
+			'wgTranslateMessageNamespaces' => 'array',
+			'wgTranslateAC' => 'array',
+			'wgTranslateGroupStructure' => 'array',
+			'wgTranslateAddMWExtensionGroups' => 'bool',
+			'wgTranslateEC' => 'array',
+			'wgTranslateTasks' => 'array',
+			'wgTranslatePHPlot' => 'text',
+			'wgTranslatePHPlotFont' => 'text',
 		),
 		'array' => array(
 			'wgTranslateLanguageFallbacks' => 'assoc',
+			'wgTranslateBlacklist' => 'array',
+			'wgTranslateMessageNamespaces' => 'ns-simple',
+			'wgTranslateAuthorBlacklist' => 'array',
+			'wgTranslateAC' => 'assoc',
+			'wgTranslateGroupStructure' => 'array',
+			'wgTranslateEC' => 'simple',
+			'wgTranslateTasks' => 'assoc',
 		),
 		'url' => 'http://www.mediawiki.org/wiki/Extension:Translate',
 	),
