@@ -2,7 +2,8 @@ This file lists changes on this extension.
 Localisation updates are done on betawiki and aren't listed here.
 
 0.5.4 - 11 July 2008
-  Removed $wgTrackLinkChanges.
+  * Removed $wgTrackLinkChanges.
+  * Updated extension's settings.
 
 0.5.3 - 9 July 2008
   Added $wgTrackLinkChanges.
